# tap-dianomi

./: .env.example  LICENSE  README.md  meltano.yml  pyproject.toml
tap_dianomi/: __init__.py  __main__.py  client.py  pagination.py  streams.py  tap.py
tests/: __init__.py  test_core.py
